--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,27 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Deploy to Cloudflare Pages
-        uses: cloudflare/wrangler-action@v3
+      - uses: actions/setup-node@v4
         with:
-          apiToken: ${{ secrets.CF_API_TOKEN }}
-          accountId: ${{ secrets.CF_ACCOUNT_ID }}
-          command: pages deploy . --project-name=opencode-line-playground-workshop-007
+          node-version: '20'
+
+      - name: Cache npm
+        uses: actions/cache@v4
+        with:
+          path: ~/.npm
+          key: npm-wrangler-v3
+
+      - name: Install wrangler
+        run: |
+          for i in 1 2 3 4 5; do
+            npm install -g wrangler@3 && break
+            echo "Attempt \$i failed, retrying in 15s..."
+            sleep 15
+          done
+          wrangler --version
+
+      - name: Deploy to Cloudflare Pages
+        run: wrangler pages deploy . --project-name=opencode-line-playground-workshop-007
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CF_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
